2002-10-14  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/diaepsrenderer.h: 
	* app/render_eps.h: 
	* app/paginate_psprint.c: 
	#ifdef'd out enough ps stuff to allow compile.  Now we just need
	to convert it.
	
2002-10-12  Hans Breuer  <hans@breuer.org>

	[last plug-in ported]

	* plug-ins/xfig/xfig-export.c : ported to new renderer api

	* plug-ins/xfig/xfig-import.c(fig_create_object) : need to
	scale color values to [0..1.0] to properly reconstruct
	user colors

	* plug-ins/xfig/xfig-common.c : some cleaning

2002-10-12  Hans Breuer  <hans@breuer.org>

	[decrease inter-plug-in-dependencies]

	* objects/custom/shape_info.[hc] : move parse_style()
	to lib/dia_svg.[hc] as dia_svg_parse_style(); Namespace
	the related structs and constants.
	* objects/custom/custom_object.c : reflect namespace
	changes

	* lib/dia_svg.[hc] : new files
	* lib/makefile.msc lib/Makefile.am : add new files
	* lib/libdia.def : updated externals

	* plug-ins/svg/svg-import.c : use dia_svg_parse_style()

	* plug-ins/svg/svg.c : enable svg import for win32 (and
	probably for other non ELF builds)

	* plug-ins/makefile.msc : enable svg import

2002-10-11  Hans Breuer  <hans@breuer.org>

	* plug-ins/metapost/render_metapost.[hc] : ported

	* plug-ins/pstricks/render_pstricks.[hc] : dito

2002-10-11  Hans Breuer  <hans@breuer.org>

	* plug-ins/cgm/cgm.c : ported, appears to work as before,
	but graphic apps available to me can't import the generated 
	files (the could not with Dia-0.90 cgm as well) ...

	* plug-ins/dxf/dxf-export.c : Ported to new renderer api.
	Removed all those function which did emulate 'complex' 
	drawing ops with basic ones (e.g. rect by line) cause this
	stuff is already provided by the base class
	* plug-ins/dxf/dxf-import.c : removed render.h include

	* plug-ins/python/pydia-font.[hc]
	  plug-ins/python/pydia-text.c : finally ported to new font api

	* plug-ins/python/pydia-layer.c : add extra parameter
	to layer_find_closest_connectionpoint()
